# poc-voice-agent

./: .gitignore  CLAUDE.md  Dockerfile  PoC実装方針.md  README.md  main.py  pyproject.toml  requirements.txt  test_audio.py
.devcontainer/: devcontainer.json  setup.sh
config/: config.yaml
config/prompts/: system_ja.txt
scripts/: download_models.py  install_models.sh
src/: app.py  llama-sample.py  whisper-sample.py
src/audio/: asr.py  capture.py  wake_vad.py
src/core/: bus.py  config.py  logging.py
src/io/: tts.py  voicevox_tts.py
src/nlp/: agent.py  llm.py  splitter.py
src/tools/: base.py  clock.py  iot_mock.py
